--- a/templates/schedule_class.html
+++ b/templates/schedule_class.html
@@ -1,34 +1,71 @@
 {% extends 'common.html' %}
 {% block rlm %}
     {% include 'admin_menu.html' %}
-    <form action="{% url 'schedule_class_reg' %}" method="post">
+
+    <!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+  </head>
+  <body>
+  <form action="{% url 'schedule_class_reg' %}" method="post">
     {% csrf_token %}
-    <table align="center" border="2">
-        <tr>
-            <th><input type="text" placeholder="Name" required name="s1"></th>
-        </tr>
-        <tr>
-            <th><input type="text" placeholder="Faculty" required name="s2"></th>
-        </tr>
-        <tr>
-            <th><input type="date" placeholder="Date" required name="s3"></th>
-        </tr>
-        <tr>
-            <th><input type="time" placeholder="Timings" required name="s4"></th>
-        </tr>
-        <tr>
-            <th><input type="number" placeholder="Fee" required name="s5"></th>
-        </tr>
-        <tr>
-            <th><input type="number" placeholder="Duration" required name="s6"></th>
-        </tr>
-        <tr>
-            <th>
-                <button type="submit">Save</button>
-            </th>
-        </tr>
+    <table align="center" border="0" width="400" bgcolor="#f5f5cc">
+        <tr><th><div class="input-group mb-3">
+    <div class="input-group-prepend">
+    <span class="input-group-text" id="inputGroup-sizing-default">Name</span>
+     </div>
+    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" required name="s1">
+        </div></th></tr>
+
+        <tr><th><div class="input-group mb-3">
+    <div class="input-group-prepend">
+    <span class="input-group-text" id="inputGroup-sizing-default">Faculty</span>
+     </div>
+    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" required name="s2">
+    </div></th></tr>
+
+        <tr><th><div class="input-group mb-3">
+    <div class="input-group-prepend">
+    <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
+     </div>
+    <input type="date" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" required name="s3">
+    </div></th></tr>
+        <tr><th> <div class="input-group mb-3">
+    <div class="input-group-prepend">
+    <span class="input-group-text" id="inputGroup-sizing-default">Time</span>
+     </div>
+    <input type="time" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" required name="s4">
+    </div></th></tr>
+        <tr><th><div class="input-group mb-3">
+    <div class="input-group-prepend">
+    <span class="input-group-text" id="inputGroup-sizing-default">Fee</span>
+     </div>
+    <input type="number" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" required name="s5">
+    </div></th></tr>
+        <tr><th ><div class="input-group mb-3">
+    <div class="input-group-prepend">
+    <span class="input-group-text" id="inputGroup-sizing-default">Duration</span>
+     </div>
+    <input type="number" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" required name="s6">
+    </div></th></tr>
+        <tr><th style="text-align: center"><button type="submit" class="btn btn-secondary">Save</button>  </th></tr>
     </table>
-    </form>
+  </form>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  </body>
+</html>
     {% if messages %}
         {% for x in messages %}
             {{ x }}
