--- a/templates/common.html
+++ b/templates/common.html
@@ -13,7 +13,7 @@
             </tr>
 
             <tr>
-                <th colspan="2">
+                <th colspan="2" bgcolor="#f5f5cc" >
                     {% block rlm %}
 
                     {% endblock %}
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th colspan="2" id="copyrights">
-                    copyrights @ easytechnilogies.in
+                    copyrights @ easytechnologies.in
                 </th>
             </tr>
         </table>
